[project]
name = "backend"
version = "0.1.0"
description = "Prompt Management Tool Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
